--- a/_sass/components/_components.hero.scss
+++ b/_sass/components/_components.hero.scss
@@ -4,7 +4,6 @@ $color--focus: #000000 !default;
 .c-hero {
     align-items: center;
     display: flex;
-    flex-flow: row wrap;
     min-height: 70vh;
     justify-content: center;
     width: calc(100vw - (100vw - 100%));
@@ -16,7 +15,7 @@ $color--focus: #000000 !default;
     margin: 0;
 }
 
-.c-hero__image {
+.c-hero__img {
     display: none;
 }
 
@@ -27,19 +26,16 @@ $color--focus: #000000 !default;
 
 @media all and (min-width: $width--desktop) {
         
-    .c-hero__title {
-        width: 50%;
-    }
-
-    .c-hero__text {
-        width: 50%;
+    .c-hero__content {
+        padding-right: 10rem;
+        width: 70%;
     }
     
-    .c-hero__image {
-        display: initial;
+    .c-hero__img {
+        display: block;
         float: right;
-        margin-top: -18rem;
-        max-height: 30rem;
+        max-height: 60rem;
+        max-width: 24rem;
     }
 
 }
